fix(ui): improve textes readability

--- a/frontend/src/components/templates/MainPage/MainPage.module.css
+++ b/frontend/src/components/templates/MainPage/MainPage.module.css
@@ -13,10 +13,9 @@
   flex-direction: column;
   gap: var(--spacing-2xl);
   width: 100%;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-.text {
+.text>* {
   text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
 }
 
